--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -411,8 +411,8 @@ subscription.close()</code></pre>
         "field1": "lorem ipsum",
         "field2": [],
         "$permissions": [
-            "read(user:627a958ded6424a98a9f)",
-            "read(user:627a958ded6424a98a9f)"
+            "read(\"user:627a958ded6424a98a9f\")",
+            "read(\"user:627a958ded6424a98a9f\")"
         ],
         "$id": "627a95c0785cc5c7fff2",
         "$collection": "example-collection"
