--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -87,7 +87,7 @@ $cols = [
                     <li><a href="/docs/pagination">Pagination</a></li>
                     <li><a href="/docs/custom-domains">Custom Domains</a></li>
                     <li><a href="/docs/permissions">Permissions</a></li>
-                    <li><a href="/docs/error-codes">Error Codes</a></li>
+                    <li><a href="/docs/response-codes">Response Codes</a></li>
                     <li><a href="/docs/rate-limits">Rate Limits</a></li>
                 </ul>
             </nav>
