Update list of attributes in databases

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -97,6 +97,10 @@
             <td>url</td>
             <td>URL attribute.</td>
         </tr>
+        <tr>
+            <td>datetime</td>
+            <td>DateTime attribute in <a href="https://en.wikipedia.org/wiki/ISO_8601" rel="noopener" target="_blank">ISO 8601</a> format and UTC timezone.</td>
+        </tr>
     </tbody>
 </table>
 
