addresses Christy's review comments

--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -23,7 +23,7 @@
 <div class="notice calm margin-top-large margin-bottom-large">
     <h4>Note</h4>
     
-    <p>You will need an active session to perform create, update, and delete type actions in your collections. If you have rules where you grant create, update, or delete access to all users or guests in a collection, create an Anonymous Session before you make the API call.</p>
+    <p>You will need an active session to perform create, update, and delete type actions in your collections. Even if create, update, and delete permissions are granted to "Role.any()", you still need to <a href="account#accountCreateAnonymousSession" target="_blank">create an anonymous session</a> before you can perform these actions.</p>
 </div>
 
 <h2 id="server-integration"><a href="/docs/permissions#server-integration">Server Integration</a></h2>
