--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -85,7 +85,7 @@
     </tr>
     <tr>
         <td>Permission.create()</td>
-        <td>Access to create new resources. Only applies to collections and buckets, applying this type of access to other resources results in an error. Does not apply to functions.</td>
+        <td>Access to create new resources. Only applies to collections and buckets, applying this type of access to other resources results in an error.</td>
     </tr>
     <tr>
         <td>Permission.update()</td>
@@ -96,8 +96,8 @@
         <td>Access to remove a resource. Does not apply to functions.</td>
     </tr>
     <tr>
-        <td>Permission.execute()</td>
-        <td>Access to execute an Appwrite Function. Does not apply to any resources other than functions.</td>
+        <td>Permission.write()</td>
+        <td>Alias to grant all of create, update, and delete access.</td>
     </tr>
     </tbody>
 </table>
