--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -13,7 +13,7 @@
 
 <h4><a href="/docs/storage#permission" id="permission">Permissions</a></h4>
 
-<p>Storage Service allows you to configure permissions at both the bucket level and the file level. When a user has the appropriate type of <a href="/docs/permissions/">access permissions</a> granted at **either** the bucket or the file level, it will be able to access the file. If the permission field is left empty, no one can access the file.</p>
+<p>Storage Service allows you to configure permissions at both the bucket level and the file level. When a user has the appropriate type of <a href="/docs/permissions/">access permissions</a> granted at **either** the bucket or the file level, they will be able to access the file. If the permission field is left empty, no one can access the file.</p>
 
 <h4>File-Level Permissions</h4>
 <p>File-level permissions grant access to individual files. File level permissions are only enabled if File Security is enabled in the settings of your bucket.
