feat(docs): add authentication guide

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -84,6 +84,7 @@ $cols = [
                 </div>
 
                 <ul class="margin-bottom">
+                    <li><a href="/docs/authentication">Authentication</a></li>
                     <li><a href="/docs/pagination">Pagination</a></li>
                     <li><a href="/docs/custom-domains">Custom Domains</a></li>
                     <li><a href="/docs/permissions">Permissions</a></li>
