address Christy and Eldad's review comments

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -140,9 +140,9 @@ brew install --HEAD appwrite</code></pre>
             "$id": "6213bb2d567d8a206614",
             "$permissions": [
                 "read(\"any\")",
-                "create(\"team:core\")",
-                "update(\"team:core\")",
-                "delete(\"team:core\")",
+                "create(\"team:admin\")",
+                "update(\"team:admin\")",
+                "delete(\"team:admin\")",
             ],
             "name": "Millenium Problems",
             "enabled": true,
