--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -344,7 +344,7 @@ func main() async throws{
         <tr>
             <td>search</td>
             <td>Query.search("text", "key words")</td>
-            <td>Searches string attributes for provided key words. Applies to any indexed string attribute.</td>
+            <td>Searches string attributes for provided keywords. Applies to any string attribute with a full-text index.</td>
         </tr>
         <tr>
             <td>orderDesc</td>
