fix notEqual syntax

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -318,7 +318,7 @@ func main() async throws{
         </tr>
         <tr>
             <td>notEqual</td>
-            <td>Query.equal("title", ["Iron Man"])</td>
+            <td>Query.notEqual("title", ["Iron Man"])</td>
             <td>Returns document if attribute is not equal to any value in the provided array. Applies to any indexed attribute.</td>
         </tr>
         <tr>
