--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -15,12 +15,12 @@
 
 <p>Storage Service allows you to configure permissions at both the bucket level and the file level. When a user has the appropriate type of <a href="/docs/permissions/">access permissions</a> granted at **either** the bucket or the file level, they will be able to access the file. If the permission field is left empty, no one can access the file.</p>
 
-<h4>File-Level Permissions</h4>
-<p>File-level permissions grant access to individual files. File level permissions are only enabled if File Security is enabled in the settings of your bucket.
+<h4>File Level Permissions</h4>
+<p>File level permissions grant access to individual files. File level permissions are only enabled if File Security is enabled in the settings of your bucket.
 </p>
 
-<h4>Bucket-Level Permissions</h4>
-<p>Bucket-level permissions apply to every file in the bucket.</p>
+<h4>Bucket Level Permissions</h4>
+<p>Bucket level permissions apply to every file in the bucket.</p>
 <div class="notice margin-top-large margin-bottom-large">
     <h5>Active Session Required</h5>
 
