formatting corrections in databases

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -33,14 +33,8 @@
 
 <h3><a href="/docs/databases#permissions" id="permissions">Permissions</a></h3>
 <p>
-    Appwrite provides permissions to restrict access to documents at two levels, document and collection level. When a user has the appropriate type of <a href="/docs/permissions/">access permissions</a> granted at **either** the document or the collection level, they will be able to access or change the document. If the permission field is left empty, Client SDKs cannot access the document.
+    Appwrite provides permissions to restrict access to documents at two levels, document and collection level. When a user has the appropriate type of <a href="/docs/permissions/">access permissions</a> granted at <b>either</b> the document or the collection level, they will be able to access or change the document. If the permission field is left empty, Client SDKs cannot access the document.
 </p>
-
-<h4>Document Level Permissions</h4>
-<p>Document level permissions grant access to individual documents. Document level permissions are only enabled if Document Security is enabled in the settings of your collection.</p>
-
-<h4>Collection Level Permissions</h4>
-<p>Collection level permissions apply to every document in the collection.</p>
 
 <div class="notice margin-top-large margin-bottom-large">
     <h5>Active Session Required</h5>
