--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -1,17 +1,17 @@
-<p>Appwrite permission mechanism offers a simple and yet flexible way to manage which users, teams, or roles can access a specific resource of your project, like documents and files.</p>
+<p>Appwrite permission mechanism offers a simple, yet flexible way to manage which users, teams, or roles can access a specific resource of your project, like documents and files.</p>
 
 <p>Using permissions, you can decide that only <span class="tag">user A</span> and <span class="tag">user B</span> will have read and update access to a specific database document, while <span class="tag">user C</span> and <span class="tag">team X</span> will be the only ones with create and delete access.</p>
 
-<p>As the name suggests, read permission allows a user to view a resource, create allows users to create new resources, update allows a user to make changes to a resource, and delete allows the user to remove the resource.</p>
+<p>As the name suggests, read permission allows a user to view a resource, create allows users to create new resources, the update allows a user to make changes to a resource, and delete allows the user to remove the resource.</p>
 
-<p>All permissions can be granted to inividual or groups of users, entire teams, or only to team members with a specific role. Permission can also be granted based on authentication status such as to all users, only authenticated users, or only guest users.</p>
+<p>All permissions can be granted to individuals or groups of users, entire teams, or only to team members with a specific role. Permission can also be granted based on authentication status such as to all users, only authenticated users, or only guest users.</p>
 
 <p>A project user can only grant a resource with permissions that they own. For example, if a user is trying to share a document with a team that they are not a member of, they will encounter a 401 not authorized error. If your app needs users to grant access to teams they're not a member of, you can create Appwrite Functions with a <a href="/docs/getting-started-for-server">Server SDK</a> to achieve this functionality.</p>
 
 <div class="notice calm margin-top-large margin-bottom-large">
     <h4>Appwrite Resource</h4>
     
-    <p>An Appwrite resource can be a database, collection, document, bucket, or a file. Each resource has it's own set of permissions to define who can interact with it.</p>
+    <p>An Appwrite resource can be a database, collection, document, bucket, or file. Each resource has its own set of permissions to define who can interact with it.</p>
 
     <p>Using the Appwrite permissions mechanism, you can grant resource access to users, teams, and members with different roles.</p>
 </div>
@@ -23,7 +23,7 @@
 <div class="notice calm margin-top-large margin-bottom-large">
     <h4>Note</h4>
     
-    <p>You will need an active session to perform create, update, and delete type actions in your collections. Even if create, update, and delete permissions are granted to "Role.any()", you still need to <a href="account#accountCreateAnonymousSession" target="_blank">create an anonymous session</a> before you can perform these actions.</p>
+    <p>You will need an active session to perform create, update, and delete type actions in your collections. Even if create, update, and delete permissions are granted to "Role.any()", you still need to <a href="/docs/client/account#accountCreateAnonymousSession" target="_blank">create an anonymous session</a> before you can perform these actions.</p>
 </div>
 
 <h2 id="server-integration"><a href="/docs/permissions#server-integration">Server Integration</a></h2>
