--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -48,7 +48,7 @@
     </tr>
     <tr>
         <td>Role.guests()</td>
-        <td>Grants access to any guest user without a session. Logged in users don't have access to this role.</td>
+        <td>Grants access to any guest user without a session. Authenticated users don't have access to this role.</td>
     </tr>
     <tr>
         <td>Role.users()</td>
@@ -85,7 +85,7 @@
     </tr>
     <tr>
         <td>Permission.create()</td>
-        <td>Access to create new resources. Does not apply to files or documents. Applying this type of access to files or documents resources results in an error.</td>
+        <td>Access to create new resources. Does not apply to files or documents. Applying this type of access to files or documents results in an error.</td>
     </tr>
     <tr>
         <td>Permission.update()</td>
@@ -137,14 +137,12 @@ promise.then(function (response) {
     console.log(response);
 }, function (error) {
     console.log(error);
-});
-
-</code></pre>
+});</code></pre>
 </div>
 
 <h3 id="example-2"><a href="/docs/permissions#example-2">Example #2 - Team Roles</a></h3>
 
-<p>In the following example, we are creating a document that can be read-only by members of team with ID <span class="tag">5c1f88b87435e</span> and can only be edited, or deleted by members of the same team that possesses the team role <span class="tag">owner</span>.</p>
+<p>In the following example, we are creating a document that can be read-only by members of the team with ID <span class="tag">5c1f88b87435e</span> and can only be edited or deleted by members of the same team that possesses the team role <span class="tag">owner</span>.</p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Permission, Role } from "appwrite";
@@ -171,7 +169,5 @@ promise.then(function (response) {
     console.log(response);
 }, function (error) {
     console.log(error);
-});
-
-</code></pre>
+});</code></pre>
 </div>
