fix: typo in "error-codes"
Removed duplication of "are" word.

--- a/app/views/docs/error-codes.phtml
+++ b/app/views/docs/error-codes.phtml
@@ -127,7 +127,7 @@ $errorTypes = $this->getParam('errors', []);
 
 <h2><a href="/docs/error-codes#errorTypes" id="errorTypes">Error Types</a></h2>
 
-<p> Appwrite also passes convenient error types in addition to the HTTP response codes to help you get more fine grained control over what went wrong and allowing you to display relevant error messages in your applications. Error types are are convenient to identify the type of error that occurred. </p>
+<p> Appwrite also passes convenient error types in addition to the HTTP response codes to help you get more fine grained control over what went wrong and allowing you to display relevant error messages in your applications. Error types are convenient to identify the type of error that occurred. </p>
 
 <p> For eg: A <span class="tag">400</span> HTTP response code could indicate a Bad Request due to a variety of reasons and error types can help you pinpoint the exact <span class="tag">400</span> error. Appwrite currently supports the following error types:</p>
 
