--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -54,7 +54,7 @@ promise.then(function (response) {
 </div>
 
 <p>
-    After an account is created, the newly created account must be verified through the <a href="/docs/authentication#accountCreateVerification">account verification route</a> provided by the Appwrite Accounts API, after which the new user can login to their account.
+    After an account is created, the newly created account must be verified through the <a href="/docs/account#accountCreateVerification">account verification route</a> provided by the Appwrite Accounts API, after which the user can login to their new account.
 </p>
 
 <h3><a href="/docs/authentication#anonymous-user" id="anonymous-user">Anonymous User</a></h3>
@@ -125,7 +125,7 @@ account.createOAuth2Session('amazon');
 </p>
 
 <p> 
-    Phone authentication requires a provider to be setup to send SMS messages. The supported providers are Twillio, Text Magic, and Telesign. There are <a href="/docs/environment-variables#phone">environment variables</a> that needs to be setup first.
+    Phone authentication requires a provider to be setup to send SMS messages. The supported providers are Twillio, Text Magic, and Telesign. After creating an SMS sender with one of these providers, configure these <a href="/docs/environment-variables#phone">environment variables</a> and restart your Appwrite containers.
 </p>
 
 <p>
@@ -172,13 +172,13 @@ promise.then(function (response) {
 </div>
 
 <p>
-    If the provided user ID has not be registered, a new user will be created.
+    If the provided user ID has not be registered, a new account will be created.
 </p>
 
 <h2><a href="/docs/authentication#login" id="login">Login</a></h2>
 
 <p>
-    Logging in with an email and password is one of the most common ways to login into an application. You can create a session maintained across page reloads and browsing sessions. Appwrite provides email and password authentication out of the box. Using one of Appwrite's client SDKs, or the REST APIs directly, you can manage user login sessions in your application.
+    Logging in with an email and password is one of the most common ways to login into an application. 
 </p>
 
 <p>
@@ -209,11 +209,11 @@ promise.then(function (response) {
 </div>
 
 <p>
-    After a user is logged in, you can also check whether the user is still logged in after a period of time. The Appwrite Account service provides a get() method that checks whether the current user session is active and returns the user information if successful.
+    When a user tries to access restricted resources, you can check if they have a valid, active session. The Account Service provides a <a href="/docs/account#accountGet">get()</a> method that checks whether the current user session is active and returns the account information if successful.
 </p>
 
 <p>
-    The example below shows you how to check whether an existing user has an active session using the Web SDK:
+    The example below shows you how to check whether there is an active session using the Web SDK:
 </p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
@@ -246,7 +246,7 @@ promise.then(function (response) {
 <h2><a href="/docs/authentication#persistence" id="persistence">Persistence</a></h2>
 
 <p>
-    Appwrite handles the persistence of the session in a consistent way across SDKs. After authenticating with an SDK, the SDK will persist the session so that the user will not need to log in again the next time they open the app. How the SDK persists in the session depends on the SDK.
+    Appwrite handles the persistence of the session in a consistent way across SDKs. After authenticating with an SDK, the SDK will persist the session so that the user will not need to log in again the next time they open the app. How the session is persisted depends on the SDK.
 </p>
 
 <ul>
@@ -259,7 +259,7 @@ promise.then(function (response) {
 <h2><a href="/docs/authentication#security" id="security">Security</a></h2>
 
 <p>
-    Security is very important to protect users' data and privacy. Appwrite uses a permissions model coupled with user sessions to ensure users only have access to certain information based on the permissions. With Appwrite services, including databases and storage, access is granted to documents and files at the collection, bucket, document, or file level. This access is consistent across access to these items in relation to document access, file access, and real-time events.
+    Security is very important to protect users' data and privacy. Appwrite uses a <a href="/docs/permissions">permissions model</a> coupled with user sessions to ensure users only have access to certain information based on the permissions. With Appwrite services, including databases and storage, access is granted at the collection, bucket, document, or file level. This access is consistent across access to these items in relation to document access, file access, and real-time events.
 </p>
 
 <h2><a href="/docs/authentication#best-practices" id="best-practices">Best Practices</a></h2>
@@ -268,15 +268,14 @@ promise.then(function (response) {
     Here are some common best practices when handling sessions and keys used for authentication purposes.
 </p>
 
-<ul>
+<ol>
     <li class="margin-bottom-tiny">Only keep user sessions active as long as needed.</li>
     <li class="margin-bottom-tiny">Access Appwrite via HTTPS to prevent any redirects from interfering with your requests.</li>
-    <li class="margin-bottom-tiny">Run Appwrite on standard ports to ensure everything works correctly. The complete endpoint is located in the Appwrite Console</li>
-    <li class="margin-bottom-tiny">Prefer using OAuth2 for authentication with first-party redirects</li>
-    <li class="margin-bottom-tiny">Generate an SSL certification for the Appwrite server</li>
-    <li class="margin-bottom-tiny">Keep API keys private and out of client-side code</li>
-    <li class="margin-bottom-tiny">Only maintain <b>1</b> instance of the Client SDK in your app to avoid conflicting session data</li>
+    <li class="margin-bottom-tiny">Prefer using OAuth2 for authentication with first-party redirects.</li>
+    <li class="margin-bottom-tiny">Generate an SSL certification for the Appwrite instance.</li>
+    <li class="margin-bottom-tiny">Keep API keys private and out of client-side code.</li>
+    <li class="margin-bottom-tiny">Only maintain <b>1</b> instance of the Client SDK in your app to avoid conflicting session data.</li>
     <li class="margin-bottom-tiny">When using the realtime service to get users' documents, clean up and resubscribe to the correct resources to maintain the correct app state.</li>
     <li class="margin-bottom-tiny">Unsubscribing from old resources is also recommended to prevent possible race conditions.</li>
-</ul>
+</ol>
 
